# aoc-2023

./: .flake8  .gitignore  README.md  fix.sh  lint.sh  main.py  pyproject.toml
.github/workflows/: ci.yaml
aoc/: main.py
aoc/eight/: solver.py  solver_test.py
aoc/eleven/: solver.py  solver_test.py
aoc/five/: solver.py  solver_test.py
aoc/four/: golf.py  solver.py  solver_test.py
aoc/nine/: golf.py  solver.py  solver_test.py
aoc/one/: solver.py  solver_test.py
aoc/seven/: solver.py  solver_test.py
aoc/six/: golf.py  solver.py  solver_test.py
aoc/ten/: solver.py  solver_test.py
aoc/three/: solver.py  solver_test.py
aoc/two/: solver.py  solver_test.py
one/: solver.py
